# micro-robot-project

./: .gitignore  robot.code-workspace
app/: pubspec.yaml
app/lib/: app_layout.dart  app_state.dart  constants.dart  main.dart
app/lib/pages/: controls.dart  landing.dart  scan_screen.dart  sensor.dart  setup.dart  setup_input.dart  setup_robot.dart  video.dart
app/lib/services/ble_connection/: ble_driver.dart  ble_interface.dart  ble_native.dart  ble_switcher.dart  ble_web.dart
app/lib/widgets/: ble_connect_button.dart  ble_status_button.dart
backend/Robot_proj/: CMakeLists.txt  build_log.txt  esptool.bat  prj.conf
backend/Robot_proj/boards/: esp32_devkitc.overlay
backend/Robot_proj/src/: bluetooth.c  bluetooth.h  main.c  wifi_server.c  wifi_server.h
